# miniking_ros

./: CMakeLists.txt  package.xml
bagfiles/: full_sonar_scan_2015-05-26-11-38-04.bag  narrow_sonar_scan_2015-05-26-11-41-49.bag
cfg/: MiniKing.cfg
include/miniking_ros/: miniking_ros.h  peak_detector.h
launch/: miniking_ros.launch
msg/: AcousticBeam.msg  ObstacleDistance.msg
src/: acoustic_beam_viewer.cpp  acousticbeam_to_laserscan.cpp  acousticbeam_viewer.cpp  laserscan_to_pointcloud.cpp  miniking_node.cpp  miniking_ros.cpp  obstacle_detector.cpp
