<?xml version="1.0"?>
<package>
  <name>miniking_ros</name>
  <version>0.0.1</version>
  <description>The miniking_ros package</description>

  <maintainer email="miquel.massot@uib.cat">Miquel Massot</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/miniking_ros</url>

  <author email="miquel.massot@uib.cat">Miquel Massot</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libminiking</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>driver_base</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libminiking</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>